[package]
name = "prun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
nix = { version = "0.28.0", features = ["sched", "process", "hostname", "user", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
